fix: spinner css covering only table

--- a/src/app/component/raw-data/raw-data.component.css
+++ b/src/app/component/raw-data/raw-data.component.css
@@ -27,7 +27,7 @@ mat-footer-row {
 
 .loading-shade {
   position: absolute;
-  top: 0;
+  top: 50px;
   left: 0;
   bottom: 56px;
   right: 0;
